--- a/__old__/temp.html
+++ b/__old__/temp.html
@@ -301,7 +301,7 @@
         <!-- // -->
     </div>
     <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/lw-onresize.js"></script>
+    <script src="js/element-resize-detector.min.js"></script>
     <script src="js/lw-app.js"></script>
     <script src="js/lw-dropdown.js"></script>
 </body>
